# nusy-nano

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md
examples/great-thinkers/: README.md
examples/great-thinkers/concepts/: categorical-imperative.md  socratic-method.md  theory-of-forms.md
examples/great-thinkers/people/: aristotle.md  darwin.md  descartes.md  hume.md  kant.md  nietzsche.md  plato.md  socrates.md  wittgenstein.md
examples/great-thinkers/works/: republic.md
src/nusy_nano/: __init__.py  cli.py  graph.py  rag.py
